# RamanSPy

./: .readthedocs.yaml  CITATION.cff  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml
.github/workflows/: python-package.yml
docs/source/: analysis.rst  conf.py  data_classes.rst  datasets.rst  index.rst  overview.rst  preprocessing.rst  synth.rst
docs/source/_templates/autosummary/: class.rst
docs/source/auto_examples/: plot_i_package_overview.py  plot_i_package_overview.py.md5  plot_i_package_overview.rst  plot_i_package_overview_codeobj.pickle  plot_i_preprocessing_pipelines.py  plot_i_preprocessing_pipelines.py.md5  plot_i_preprocessing_pipelines_codeobj.pickle  plot_ii_dl_denoising.py  plot_ii_dl_denoising.py.md5  plot_ii_dl_denoising.rst  plot_ii_dl_denoising_codeobj.pickle  plot_iii_bacteria_classification.ipynb  plot_iii_bacteria_classification.py  plot_iii_bacteria_classification.py.md5  plot_iii_bacteria_classification_codeobj.pickle  sg_execution_times.rst
docs/source/auto_tutorials/: index.rst
docs/source/auto_tutorials/i-classes/: plot_i_generic_container.ipynb  plot_i_generic_container.py.md5  plot_i_generic_container.rst  plot_i_generic_container_codeobj.pickle  plot_ii_spectrum_container.py.md5  plot_ii_spectrum_container.rst  plot_ii_spectrum_container_codeobj.pickle  plot_iii_image_container.py  plot_iii_image_container.py.md5  plot_iii_image_container_codeobj.pickle  plot_iv_volume_container.ipynb  plot_iv_volume_container.py.md5  plot_iv_volume_container.rst  plot_iv_volume_container_codeobj.pickle  sg_execution_times.rst
docs/source/auto_tutorials/ii-instrumental/: i_witec.ipynb  i_witec.rst  i_witec_codeobj.pickle  ii_renishaw.ipynb  (+7 more)
docs/source/examples/: 3D THP1 map 001 L5 (B+R) (Sub BG).mat  README.rst  plot_i_package_overview.py  plot_i_preprocessing_pipelines.py  plot_ii_dl_denoising.py
docs/source/tutorials/: README.rst
paper_reproducibility/: fig2_cell_analysis.ipynb  fig3_preprocessing_pipelines.ipynb  fig4_dl_denoising.ipynb  fig5_bacteria_classification.ipynb
src/ramanspy/: __init__.py  core.py  datasets.py  load.py  metrics.py  utils.py
src/ramanspy/analysis/: Step.py  __init__.py  cluster.py  decompose.py  unmix.py
src/ramanspy/plot/: __init__.py  _core.py  plot.py
src/ramanspy/preprocessing/: Pipeline.py  Step.py  __init__.py  baseline.py  denoise.py  despike.py  misc.py  normalise.py  protocols.py
src/ramanspy/synth/: __init__.py  mix.py  synth.py
(+84 files in other folders)
