# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ramanspy"
version = "0.1.1"
description = "RamanSPy: An open-source Python package for integrative Raman spectroscopy data analysis"
readme = "README.md"
authors = [{ name = "Dimitar Georgiev", email = "d.georgiev21@imperial.ac.uk" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = [
    "Raman spectroscopy",
    "spectral analysis",
    "chemometrics",
    "preprocessing pipeline",
    "artificial intelligence",
    "machine learning",
    "Python package",
]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "scikit-learn",
    "pybaselines",
    "pysptools",
    "cvxopt",
    "renishawWiRE",
    "pandas",
    "wget",
]
requires-python = ">=3.8"


[project.urls]
Documentation = "https://ramanspy.readthedocs.io"
Source = "https://github.com/barahona-research-group/RamanSPy"
Preprint = "https://chemrxiv.org/engage/chemrxiv/article-details/64a53861ba3e99daef8c9c51"

[options.packages.find]
where = "src"
